# data-warehouse-hive

./: README.md
backend/: .gitignore  README.md  app.py  config.py  csv_processor.py  hive_manager.py  pyproject.toml
docker/: .env.template  .gitignore  docker-compose.yml
frontend/: README.md  bts.jsonc  package.json  pnpm-lock.yaml
frontend/apps/web/: package.json
frontend/apps/web/src/app/: layout.tsx  page.tsx
frontend/apps/web/src/app/api/upload-status/[id]/: route.ts
frontend/apps/web/src/app/api/upload/[[...slug]]/: route.ts
